# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  README.md  REPORT.md
.github/workflows/: ci.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
cmake/: HunterGate.cmake
cmake/Hunter/: config.cmake
cmake/projects/georgij5920_print/: hunter.cmake
demo/: CMakeLists.txt  main.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.h
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt  hello_world.cpp
print_lib/: CMakeLists.txt  print.cpp  print.hpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.h
tests/: test_account.cpp  test_transaction.cpp
